Fix T47482: Own mistake in new handling of 'userone' ID usages when decrementing usercount.

Ended up not handling at all 'userone' case, now it increments usercount correctly when needed.